Various fixes Moved expand-collapse icon to be prepended rather than appended to resolve hover issues Added animation to expand Fixed issue with expand icons being white in light theme Breadcrumb vertical alignment

--- a/styles/sidebar.scss
+++ b/styles/sidebar.scss
@@ -122,11 +122,15 @@ ul.treeview li.expanded>ul {
     cursor: pointer;
     position: absolute;
     /* left: -42px; */
-    top: 4px;
+    top: 2px;
 	padding: 5px 15px;
-	-ms-transform: rotate(360deg);
-	-webkit-transform: rotate(360deg);
-	transform: rotate(360deg);
+	-ms-transform: rotate(0deg);
+	-webkit-transform: rotate(0deg);
+	transform: rotate(0deg);
+    -webkit-transition: transform 200ms ease-in-out;
+    -moz-transition: transform 200ms ease-in-out;
+    -o-transition: transform 200ms ease-in-out;
+	transition: transform 200ms ease-in-out;
 }
 
 .treeview>li
@@ -256,4 +260,6 @@ aside#sidebar nav.primary,
 	aside#sidebar nav.secondary
 {
 	margin-right: 5px;
+	position: relative;
+	left: -5px;
 }
